RESOLVED FIXED181054
GetPropertyEnumerator in DFG/FTL should not unconditionally speculate cell
https://bugs.webkit.org/show_bug.cgi?id=181054
Summary GetPropertyEnumerator in DFG/FTL should not unconditionally speculate cell
Saam Barati
Reported 2017-12-20 13:40:45 PST
This leads to a recompile loop in Speedometer. Fixing it doesn't really provide a noticeable speed boost in speedometer, but it's a bug we should fix in our compiler nonetheless.
Attachments
patch (7.88 KB, patch)
2017-12-20 14:09 PST, Saam Barati
no flags
Saam Barati
Comment 1 2017-12-20 14:09:27 PST
Mark Lam
Comment 2 2017-12-20 14:15:04 PST
Comment on attachment 329952 [details] patch r=me.
WebKit Commit Bot
Comment 3 2017-12-20 17:54:49 PST
Comment on attachment 329952 [details] patch Clearing flags on attachment: 329952 Committed r226208: <https://trac.webkit.org/changeset/226208>
WebKit Commit Bot
Comment 4 2017-12-20 17:54:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-12-20 17:58:05 PST
Note You need to log in before you can comment on or make changes to this bug.